--- a/styles/style.scss
+++ b/styles/style.scss
@@ -14,7 +14,7 @@ rgba(255, 255, 255, .2) 30%, rgba(255, 255, 255, 0) 100%);
 body {
     margin: 0;
     padding: 0;
-    background-image: url("images/wood-background-image.jpg");
+    background-image: url("../images/wood-background-image.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     color: white;
@@ -286,7 +286,7 @@ h1 {
                 height: 160px;
                 position: absolute;
                 left: 60px;
-                background:url("images/left-win-image.png");
+                background:url("../images/left-win-image.png");
                 background-size: 100px 160px;
                 background-repeat: no-repeat;
             }
@@ -296,7 +296,7 @@ h1 {
                 height: 160px;
                 position: absolute;
                 left: 340px;
-                background:url("images/right-win-image.png");
+                background:url("../images/right-win-image.png");
                 background-size: 100px 160px;
                 background-repeat: no-repeat;
             }
