--- a/styles/style.css
+++ b/styles/style.css
@@ -6,7 +6,7 @@
 body {
   margin: 0;
   padding: 0;
-  background-image: url("images/wood-background-image.jpg");
+  background-image: url("../images/wood-background-image.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   color: white;
@@ -311,7 +311,7 @@ h1 {
   height: 160px;
   position: absolute;
   left: 60px;
-  background: url("images/left-win-image.png");
+  background: url("../images/left-win-image.png");
   background-size: 100px 160px;
   background-repeat: no-repeat;
 }
@@ -322,7 +322,7 @@ h1 {
   height: 160px;
   position: absolute;
   left: 340px;
-  background: url("images/right-win-image.png");
+  background: url("../images/right-win-image.png");
   background-size: 100px 160px;
   background-repeat: no-repeat;
 }
